--- a/style.css
+++ b/style.css
@@ -57,6 +57,16 @@ nav a:hover, nav a.active {
   height: 70vh;
   overflow: hidden;
 }
+.video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1; 
+  background: url('zelda-bg-fallback.jpg') center/cover no-repeat;
+}
 
 #bg-video {
   position: absolute;
